# NetVis

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRACTS.md  DECISIONS.md  LICENSE  README.md
.github/workflows/: ci.yml  package.yml  release-override.yml
assets/: netvis.icns  netvis.rc
docs/: plugin-abi.md  v0.4.0-plan.md  v0.5.0-plan.md  v0.6.0-design.md  v0.6.0-plan.md  v0.6.3-plan.md  v0.6.5-plan.md  v0.6.x-followups-plan.md  v0.6.x-roadmap.md
plugins/examples/: README.md
plugins/examples/attn_pass/: README.md  attn_pass.c  build.sh
plugins/examples/color-theme/: plugin.json
plugins/examples/custom-norm/: plugin.json
plugins/examples/group-conv/: plugin.json
plugins/examples/linear-layer/: plugin.json
plugins/examples/my-ops/: plugin.json
plugins/examples/toy_parser/: README.md  build.sh  toy_parser.c
plugins/sdk/: netvis_plugin.h
src/: main.cpp
src/core/: ByteReader.h  Hash.h  JobSystem.h  MappedFile.cpp  MappedFile.h  Result.h  SafeMath.cpp  SafeMath.h  SmallVec.h  StringArena.h
src/engine/: CollapseTree.cpp  CollapseTree.h  CostModel.cpp  CostModel.h  DiffLoader.cpp  DiffLoader.h  GraphAdjacency.cpp  GraphAdjacency.h  HeatmapGradient.cpp  HeatmapGradient.h  Layout.h  LayoutCache.cpp  LayoutCache.h  LayoutEngine.cpp  LayoutEngine.h  ModelDiff.cpp  ModelDiff.h  ModelPath.cpp  ModelPath.h  ModelSession.cpp  ModelSession.h  OpCategory.cpp  OpCategory.h  SearchIndex.cpp  SearchIndex.h  ShapeInference.cpp  ShapeInference.h  ShapeInferenceExt.cpp  ShapeInferenceExt.h  TensorStats.cpp  TensorStats.h
src/engine/plugin/: OpHandler.h  ParserPlugin.h  PassPlugin.h  PluginPrefs.cpp  PluginPrefs.h  Registry.cpp  Registry.h  ShapeMath.h
src/engine/plugin/declarative/: Dsl.cpp  Dsl.h  Manifest.cpp  Manifest.h
src/engine/plugin/wasm/: WasmHost.cpp  WasmHost.h  WasmOpHandler.cpp  WasmOpHandler.h  WasmParser.cpp  WasmParser.h  WasmRuntime.cpp  WasmRuntime.h
src/ir/: IR.cpp  IR.h
src/parsers/: Detect.cpp  Parser.h
src/parsers/coreml/: CoreMlParser.cpp
src/parsers/gguf/: GgufParser.cpp
src/parsers/keras/: Hdf5Reader.cpp  Hdf5Reader.h  KerasParser.cpp
src/parsers/npz/: NpzParser.cpp
src/parsers/onnx/: OnnxParser.cpp  WireReader.cpp  WireReader.h
src/parsers/openvino/: OpenVinoParser.cpp  XmlReader.cpp  XmlReader.h
src/parsers/pytorch/: PickleVM.cpp  PickleVM.h  PytorchParser.cpp
src/parsers/safetensors/: SafeTensorsParser.cpp
src/parsers/tflite/: TfliteParser.cpp
src/view/: App.cpp  App.h  Camera.cpp  CostPanel.cpp  CostPanel.h  DiffPanel.cpp  DiffPanel.h  GraphCanvas.cpp  GraphNav.cpp  GraphNav.h  Minimap.cpp  PanelHelpers.cpp  PanelHelpers.h  PluginsPanel.cpp  PluginsPanel.h  PropertiesPanel.cpp  SearchBar.cpp  StatusBar.cpp  TensorTable.cpp  WeightInspector.cpp
tests/: test_core.cpp  test_coreml.cpp  test_cost.cpp  test_declarative.cpp  test_detect.cpp  test_gguf.cpp  test_gradient.cpp  test_graph_adjacency.cpp  test_hardening.cpp  test_keras.cpp  test_layout.cpp  test_layout_drift.cpp  test_layout_readability.cpp  test_mlpackage.cpp  test_modeldiff.cpp  test_npy.cpp  test_npz.cpp  test_onnx.cpp  test_onnx_external.cpp  test_openvino.cpp  test_pickle.cpp  test_plugin_examples.cpp  test_plugins_enable.cpp  test_pytorch.cpp  test_registry.cpp  test_safetensors.cpp  test_sdk_abi.cpp  test_search.cpp  test_shape_ext.cpp  test_tflite.cpp  test_tflite_subgraph.cpp  test_torchscript.cpp  test_truncation.cpp  test_wasm.cpp  test_wasm_ophandler.cpp  test_wasm_parser.cpp
tests/fixtures/: plugin_loop.wasm  plugin_pass.wasm
tools/: gen_fixtures.py  gen_icons.sh  patch_wasm3.py  validate_plugin.py
